# SlackChatDumper

./: .gitignore  README.md  export_slack.py  import_to_sqlite.py  pyproject.toml  requirements.txt  update.sh
script/: export_slack.py  import_to_sqlite.py  update.sh
slackdump/: __init__.py  __main__.py  cli.py  config.py  export.py  importer.py  ratelimit.py  sync.py  util.py
